# XYChat_Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Chat-Client/: CMakeLists.txt  main.cpp
Chat-Client/core/: NetworkManager.cpp  NetworkManager.h
Chat-Client/ui/: LoginWindow.ui  MainWindow.ui
Chat-Client/views/: LoginWindow.cpp  LoginWindow.h  MainWindow.h
Chat-Server/: CMakeLists.txt  main.cpp
Chat-Server/core/: RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h
Chat-Server/database/: DatabaseManager.cpp  DatabaseManager.h
Chat-Server/src/server/: RequestHandler.cpp  Server.cpp
CommonModule/encryption/: EncryptionManager.cpp  EncryptionManager.h
CommonModule/protocol/: Packet.h  PacketCodec.cpp  PacketCodec.h
docs/: ARCHITECTURE.md  PROTOCOL.md  ROADMAP.md  SECURITY.md
tests/: CMakeLists.txt
tests/unit/: TestEncryptionManager.cpp  TestPacketCodec.cpp
